--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
    <header>
     <h1>Sveikas as esu git</h1>
+    <p>Sveikas</p>
+    <h2>Pamoka</h2>
    </header> 
    <footer><p>Pastraipa</p></footer>
 </body>
